--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -25,6 +25,9 @@
       color:white;
       opacity:0.75;
     }
+  button, select {
+    font-size: 0.9em;
+  }
   </style>
 	
   <script type="text/javascript">
@@ -38,12 +41,13 @@
         pageList:null,
         hiddenDefaultWiki:null,
         homeProject:'wikiwym',
-        diffMode:false,
+        viewMode:'preview',
         pageCache: {}
     };
     jQuery(document).ready(function(JQ) {
         jQuery.noConflict();
         ThisApp.gcwp = new GoogleCodeWikiParser();
+        ThisApp.gcwp.options.outputSeparator = '\n';
         ThisApp.preview = jQuery('#wikicontent');
         ThisApp.textarea = jQuery('#textarea');
         ThisApp.hiddenDefaultWiki = jQuery('#DefaultWikiText');
@@ -71,12 +75,6 @@
             updateView();
             //alert( ThisApp.gcwp.options.disableWarnings );
         });
-        ThisApp.cbDiffMode = jQuery('#optionDiffMode');
-        ThisApp.cbDiffMode.click( function() {
-            ThisApp.diffMode = jQuery(this).is(':checked');
-            updateView();
-            //alert( ThisApp.gcwp.options.disableWarnings );
-        });
         if(1)
         {
             var sel = jQuery('#SelectProject');
@@ -89,6 +87,10 @@
                 }
             });
         }
+        jQuery('input[name=viewMode]').click( function() {
+          ThisApp.viewMode = jQuery(this).attr('value');
+          updateView();
+        });
         if(1)
         {  // Add a visual notification when JSONRequest messages are pending...
             var notif = jQuery('#ajaxNotification');
@@ -116,26 +118,33 @@
     });
     function updateView()
     {
+        /* src= jquery element whose height we need to get.
+        dest = jquery element whose size needs to be set to src's size.
+        */
+        function obligatoryLayoutKludge(src,dest)
+        {
+          // obligatory layout kludge:
+          var wid = jQuery('#layout').width() || jQuery('body').width() || 800;
+          var ht =  src.height() || jQuery('body').height() || 800;
+          if( ht < 64 ) ht = 64;
+          wid = (wid-(wid/25))/2;
+          dest.css({width:wid, height:ht});
+          //ThisApp.preview.css({width:wid});
+        }
+        var labelElem = jQuery('#viewModeName');
         try
         {
             var c = ThisApp.textarea.attr('value');
-            if(!ThisApp.diffMode)
+            if((!ThisApp.viewMode) || ('preview' === ThisApp.viewMode))
             {
+                labelElem.text("Preview");
                 c = ThisApp.gcwp.parse(c);
                 if( ThisApp.pageName )
                 {
                     c = '<h1>'+ThisApp.pageName+'</h1>'+c;
                 }
                 ThisApp.preview.html( c );
-                if(1)
-                {
-                    // obligatory layout kludge:
-                    var wid = jQuery('#layout').width() || jQuery('body').width() || 800;
-                    var ht =  ThisApp.preview.height() || jQuery('body').height() || 800;
-                    wid = (wid-(wid/25))/2;
-                    ThisApp.textarea.css({width:wid, height:ht});
-                    //ThisApp.preview.css({width:wid});
-                }
+                obligatoryLayoutKludge(ThisApp.preview, ThisApp.textarea);
                 /**
                     Update links within the preview area:
 
@@ -167,35 +176,61 @@
                 });
                 prettyPrint()/* updates {{{code}}} blocks. */;
             }
-            else if(c) // diff mode
+            else if('diff' === ThisApp.viewMode)
             {
-                var orig = ThisApp.pageCache[ThisApp.pageName];
-                var base = difflib.stringAsLines(orig ? orig : c);
-                var newtxt = difflib.stringAsLines(c);
-                // create a SequenceMatcher instance that diffs the two sets of lines
-                var sm = new difflib.SequenceMatcher(base, newtxt);
-                // get the opcodes from the SequenceMatcher instance
-                // opcodes is a list of 3-tuples describing what changes should be made to the base text
-                //      in order to yield the new text
-                var opcodes = sm.get_opcodes();
-                var diffoutputdiv = ThisApp.preview;
-                diffoutputdiv.empty();
-                var contextSize = null;
-                // build the diff view and add it to the current DOM
-                diffoutputdiv.append(diffview.buildView({
-                    baseTextLines:base,
-                    newTextLines:newtxt,
-                    opcodes:opcodes,
-                    // set the display titles for each resource
-                    baseTextName:"Their Copy",
-                    newTextName:"Your Copy",
-                    contextSize:contextSize,
-                    viewType: 1 //$("inline").checked ? 1 : 0
-                }));
-                // scroll down to the diff view
-                //window.location = url + "#diff";
+                labelElem.text("Diff");
+                if( c )
+                {
+                  var orig = ThisApp.pageCache[ThisApp.pageName];
+                  var base = difflib.stringAsLines(orig ? orig : c);
+                  var newtxt = difflib.stringAsLines(c);
+                  // create a SequenceMatcher instance that diffs the two sets of lines
+                  var sm = new difflib.SequenceMatcher(base, newtxt);
+                  // get the opcodes from the SequenceMatcher instance
+                  // opcodes is a list of 3-tuples describing what changes should be made to the base text
+                  //      in order to yield the new text
+                  var opcodes = sm.get_opcodes();
+                  var diffoutputdiv = ThisApp.preview;
+                  diffoutputdiv.empty();
+                  var contextSize = null;
+                  // build the diff view and add it to the current DOM
+                  diffoutputdiv.append(diffview.buildView({
+                      baseTextLines:base,
+                      newTextLines:newtxt,
+                      opcodes:opcodes,
+                      // set the display titles for each resource
+                      baseTextName:"Server Version",
+                      newTextName:"Your Version",
+                      contextSize:contextSize,
+                      viewType: 1 //$("inline").checked ? 1 : 0
+                  }));
+                }
+                else {
+                  ThisApp.preview.empty().text("Nothing to diff!");
+                }
+                obligatoryLayoutKludge( jQuery(diffoutputdiv), ThisApp.textarea);
             }
-
+            else if( 'html' === ThisApp.viewMode )
+            {
+                labelElem.text("HTML");
+                if(c) c = ThisApp.gcwp.parse(c);
+                //alert( c ? c.substr(1,10) : "EMPTY!");
+                var wrap = jQuery('<div></div>');
+                if( ThisApp.pageName )
+                {
+                    wrap.append( '<h1>'+ThisApp.pageName+'</h1>' );
+                }
+                var ta = jQuery("<textarea cols='60' readonly></textarea>");
+                ta.attr('value', c );
+                wrap.append(ta);
+                //ta.css( ThisApp.textarea.css() );// breaks in jQuery core
+                obligatoryLayoutKludge( ThisApp.textarea, ta );
+                ThisApp.preview.empty().append(wrap);
+            }
+            else
+            {
+              throw new Error("Internal error: unexpected view mode '"+ThisApp.viewMode+"'!");
+            }
         }
         catch(e)
         {
@@ -272,14 +307,18 @@
     }
     function loadProjectList(proj)
     {
-        proj = proj || ThisApp.projectInput.attr('value');
-        ThisApp.projectInput.attr('value',proj);
+        if( ! proj ) {
+          proj = ThisApp.projectInput.attr('value');
+        }
+        else {
+          ThisApp.projectInput.attr('value',proj);
+        }
         if( ! /^\S+$/.test(proj) )
         {
             alert("You must enter a Google Code project name first!");
             return;
         }
-        ThisApp.pageList.empty().text('Loading wiki page list for '+ThisApp.project+'...');
+        ThisApp.pageList.empty().text('Loading wiki page list for '+proj+'...');
         var r = new JSONRequest({type:'googlecode/getWikiList',
                     payload:{
                         project:proj
@@ -316,8 +355,9 @@
   <tr>
   <td colspan=2>
     Google Code project name: <input type='text' id='GoCoProjectName' cols='40' value='wikiwym'/>
-    or: <select id='SelectProject'>
+    or: <select id='SelectProject' title='These projects were selected because they have nice test pages :)'>
     <option>--Select Project--</option>
+    <option>beup</option>
     <option>v8</option>
     <option>v8-juice</option>
     <option>v8cgi</option>
@@ -335,16 +375,22 @@
   </td>
   </tr>
   <tr>
-    <td align='left'>
+    <td align='left' colspan='2'>
       <button onclick="goHome()">Home</button>
       <span class='container' title='Note that warnings may be caused by some malformed wiki code or bugs in this parser.'>Disable parser warnings? <input type='checkbox' id='optionEnableWarnings' /></span>
-      <span class='container' title='Switch between preview and diff modes.'>Diff mode?<input type='checkbox' id='optionDiffMode' /></span>
-    </td>
-    <td align='left'>
-      <button onclick="updateView()">Update Preview</button>
+      <span class='container' title='Switch view modes.'>
+      <strong>View Modes:</strong> 
+      [<input type='radio' name='viewMode' value='preview' checked='checked'/>Preview]
+      [<input type='radio' name='viewMode' value='diff' />Diff]
+      [<input type='radio' name='viewMode' value='html' />HTML]
+      </span>
     </td>
   </tr>
-  <tr><th>Google Code-style Wiki Markup</th><th>HTML</th></tr>
+  <tr><th>Google Code-style Wiki Markup</th>
+      <th><span id='viewModeName'>Preview</span>
+        <button onclick="updateView()" title='Also use this to re-layout the views if you resize your browser window.'>Update</button>
+      </th>
+  </tr>
   <tr>
     <td class="layout" width='50%' valign='top' align='left'>
         <textarea id="textarea" wrap="soft" rows="50" class="editor">
@@ -378,6 +424,7 @@ This app was written by [http://wanderinghorse.net/home/stephan/ Stephan Beal] w
   * [http://code.google.com/p/wikiwym Wikiwym] for the wiki-to-HTML conversion.
   * [http://code.google.com/u/fabien.menager/ Fabien M&#0233;nager] provided the initial wiki-parsing code and inspiration.
   * [http://code.google.com/p/google-code-prettify/ google-code-prettify] for the syntax highlighting in source code blocks.
+  * [http://snowtide.com/jsdifflib Chas Emerick] wrote the "diff" view code.
   * [http://getfirebug.com/ Firebug] (in [http://www.getfirefox.com Firefox]) was often helpful, but most testing took place in [http://www.google.com/chrome Google Chrome]. (Running on Linux, of course.)
   * [http://kdewebdev.org Quanta/KDEWebDev] as the dev environment (because Emacs can't indent !JavaScript worth a damn).
   * A bacon and egg sandwich to curb the hunger in the middle of the hacking session.
