Added link to wikiwym home page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <body>
 	<p>
-		Wikiwym is wiki syntax parser, implemented in JavaScript, which tries to reasonably imitate the Google Code wiki format.
+		<a href='http://code.google.com/p/wikiwym/'>Wikiwym</a> is wiki syntax parser,
+        implemented in JavaScript, which tries to reasonably imitate the Google Code wiki format.
 	</p>
 	
 	<p>
@@ -16,9 +17,9 @@
 	</p>
 	
   <ul>
+    <li><a href="GoCoWi-previewer.html">GoCoWi previewer (requires a PHP server for the back-end)</a></li>
     <li><a href="index-prototype.html">Prototype.js version</a></li>
     <li><a href="index-jquery.html">jQuery version</a></li>
-    <li><a href="GoCoWi-previewer.html">GoCoWi previewer (requires a PHP server)</a></li>
   </ul>
 </body>
 </html>
