Minor text updates.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -415,11 +415,11 @@ when you tap Enter or click the Update button.
 =About this Application=
 This app was written by [http://wanderinghorse.net/home/stephan/ Stephan Beal] with a little help from:
 
-  * [http://fossil.wanderinghorse.net/repos/JSONMessage JSONMessage] for the AJAX/RPC support. (i.e. fetching remote wiki pages.)
-  * [http://www.jquery.com jQuery] to simplify the DOM manipulation.
   * [http://code.google.com/p/wikiwym Wikiwym] for the wiki-to-HTML conversion.
-  * [http://code.google.com/u/fabien.menager/ Fabien M&#0233;nager] provided the initial wiki-parsing code and inspiration.
-  * [http://code.google.com/p/google-code-prettify/ google-code-prettify] for the syntax highlighting in source code blocks.
+  * [http://code.google.com/u/fabien.menager/ Fabien M&#0233;nager], co-developer of Wikiwym, provided the initial inspiration.
+  * The [http://fossil.wanderinghorse.net/repos/JSONMessage JSONMessage] framework collects the wiki pages from google.
+  * [http://www.jquery.com jQuery] simplifies the DOM manipulation and UI interaction.
+  * [http://code.google.com/p/google-code-prettify/ google-code-prettify] does the syntax highlighting in wiki source code blocks and the HTML preview.
   * [http://snowtide.com/jsdifflib Chas Emerick] wrote the "diff" view code.
   * [http://getfirebug.com/ Firebug] (in [http://www.getfirefox.com Firefox]) was often helpful, but most testing took place in [http://www.google.com/chrome Google Chrome]. (Running on Linux, of course.)
   * [http://kdewebdev.org Quanta/KDEWebDev] as the dev environment (because Emacs can't indent !JavaScript worth a damn).
