Changed the images to the same size and to be side-by-side.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -438,15 +438,9 @@ too tired to deal with new "nice-to-have" features.
 
 =Brought to You By...=
 
-Stephan Beal:
-
-
-[http://wanderinghorse.net/home/stephan/ http://wanderinghorse.net/home/stephan/stephan_beal_sylt_072006_small.jpg]
-
-Fabian  M&#0233;nager:
-
-
-[http://phenxdesign.net/  http://fossil.wanderinghorse.net/demos/wikiwym/fabien-menager.jpg]
+Stephan Beal: [http://wanderinghorse.net/home/stephan/ http://wanderinghorse.net/home/stephan/stephan_beal_sylt_072006_small.jpg]
+and
+Fabian  M&#0233;nager: [http://phenxdesign.net/  http://fossil.wanderinghorse.net/demos/wikiwym/fabien-menager.jpg]
 </div>
 
 <span id='ajaxNotification'></span>
