Pulled in latest JSONMessage code. Includes renaming of the core JS classes, to avoid a potential collision with Doug Crockford's JSONRequest API.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -121,7 +121,7 @@
           }
         });
         if(1)
-        {  // Add a visual notification when JSONRequest messages are pending...
+        {  // Add a visual notification when JSONMessage.Request messages are pending...
             var notif = jQuery('#ajaxNotification');
             notif.hide();
             notif.postCount = 0;
@@ -129,15 +129,15 @@
             notif.updateMessage = function(n)
             {
                 this.postCount += n;
-                this.text( this.postCount + ' pending JSONRequest connection(s)...' );
+                this.text( this.postCount + ' pending JSONMessage.Request connection(s)...' );
                 if( 1 == this.postCount ) this.fadeIn(this.fadeSpeed);
                 else if( ! this.postCount ) this.fadeOut(this.fadeSpeed);
             };
-            JSONRequest.options.ajax.beforePost = function(req,opt)
+            JSONMessage.Request.options.ajax.beforePost = function(req,opt)
             {
                 notif.updateMessage(1);
             };
-            JSONRequest.options.ajax.afterPost = function(req,opt)
+            JSONMessage.Request.options.ajax.afterPost = function(req,opt)
             {
                 notif.updateMessage(-1);
             };
@@ -269,7 +269,7 @@
         }
     }
 
-    // JSONRequest.post() onResponse() handler.
+    // JSONMessage.Request.post() onResponse() handler.
     function processLoadedWikiPage(resp,req)
     {
         if( 0 != resp.resultCode() )
@@ -291,7 +291,7 @@
         ThisApp.textarea.text("Loading page "+ThisApp.project+'/'+pageName+' from Google Code subversion...');
         updateView();
         //alert("Clicked "+pg);
-        var r = new JSONRequest({type:'googlecode/getWikiPage',
+        var r = new JSONMessage.Request({type:'googlecode/getWikiPage',
                 payload:{
                     project:ThisApp.project,
                     page:pageName
@@ -299,7 +299,7 @@
         r.post( {onResponse:processLoadedWikiPage} );
     }
 
-    // JSONRequest.post() onResponse() handler.
+    // JSONMessage.Request.post() onResponse() handler.
     function processLoadedProjectList(resp,req)
     {
         if( 0 != resp.resultCode() )
@@ -350,7 +350,7 @@
             return;
         }
         ThisApp.pageList.empty().text('Loading wiki page list for '+proj+'...');
-        var r = new JSONRequest({type:'googlecode/getWikiList',
+        var r = new JSONMessage.Request({type:'googlecode/getWikiList',
                     payload:{
                         project:proj
                     }});
@@ -370,9 +370,10 @@
   </script>
 </head>
 <body>
-	<div>
-		Google Code project name: <input type='text' id='GoCoProjectName' size='20' value='wikiwym'/>
-    or: 
+    <div style='text-align:center;padding:0px;margin:0px;'>
+    <h2><a href='http://code.google.com/p/wikiwim'>Wikiwim</a> Preview Application</h2>
+    Enter a Google Code project name: <input type='text' id='GoCoProjectName' size='20' value='wikiwym'/>
+    or:
 		<select id='SelectProject' title='These projects were selected because they have nice test pages :)'>
 	    <option>--Select Project--</option>
 	    <option>beup</option>
@@ -385,8 +386,7 @@
 	    <option>wikiwym</option>
 	    <option>cproxyv8</option>
     </select>
-    or: 
-		<button onclick="goHome()">Home</button>
+    or: <button onclick="goHome()">Home</button>
 	</div>
 	
 	<div id="WikiPageList">
@@ -396,34 +396,34 @@
   <table class="layout">
   <tr>
 <!--  	<td><strong>Google Code-style Wiki Markup</strong></td>-->
-    <td colspan='2' align='right' valign='bottom'>
-    <div>
+    <td colspan='2'> <!--align='right' valign='bottom'-->
       <h2 style='float:left; clear:none;'>Google Code-style Wiki Markup:</h2>
-      <fieldset title="Switch view modes.">
-        <legend>View Modes</legend> 
-        <label><input type="radio" name="viewMode" value="preview" checked="checked"/> Preview</label>
-        <label><input type="radio" name="viewMode" value="diff" /> Diff</label>
-        <label><input type="radio" name="viewMode" value="html" /> HTML</label>
-      </fieldset>
-      <fieldset title="Change when the preview is updated.">
-        <legend>Update preview on...</legend>
-        <label><input type="radio" name="updateMode" value="enter" checked="checked"/>ENTER</label>
-        <label><input type="radio" name="updateMode" value="keypress" />Keypress</label>
-        <label><input type="radio" name="updateMode" value="timer" />Timer:
-            <select id='timerValue'>
-            <option value='3000'>3s</option>
-            <option value='5000'>5s</option>
-            <option value='10000' selected>10s</option>
-            <option value='30000'>30s</option>
-            <option value='60000'>60s</option>
-            </select>
-        </label>
-      </fieldset>
-      <fieldset title="Note that warnings may be caused by some malformed wiki code or bugs in this parser">
-        <legend>Options</legend> 
-        <label><input type="checkbox" id="optionEnableWarnings" /> Disable warnings?</label>
-      </fieldset>
-    </div>
+      <div style='float:right; clear:none;'>
+        <fieldset title="Switch view modes.">
+          <legend>View Modes</legend> 
+          <label><input type="radio" name="viewMode" value="preview" checked="checked"/>Preview</label>
+          <label><input type="radio" name="viewMode" value="html" />HTML</label>
+          <label><input type="radio" name="viewMode" value="diff" />Diff</label>
+        </fieldset>
+        <fieldset title="Change when the preview is updated.">
+          <legend>Update preview on...</legend>
+          <label><input type="radio" name="updateMode" value="enter" checked="checked"/>ENTER</label>
+          <label><input type="radio" name="updateMode" value="keypress" />Keypress</label>
+          <label><input type="radio" name="updateMode" value="timer" />Timer:
+              <select id='timerValue'>
+              <option value='3000'>3s</option>
+              <option value='5000'>5s</option>
+              <option value='10000' selected>10s</option>
+              <option value='30000'>30s</option>
+              <option value='60000'>60s</option>
+              </select>
+          </label>
+        </fieldset>
+        <fieldset title="Note that warnings may be caused by some malformed wiki code or bugs in this parser">
+          <legend>Options</legend> 
+          <label><input type="checkbox" id="optionEnableWarnings" /> Disable warnings?</label>
+        </fieldset>
+      </div>
     </td>
   </tr>
   <tr>
