Added new jsonmessage GoCo project to the selection list.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -374,17 +374,18 @@
     <h2><a href='http://code.google.com/p/wikiwim'>Wikiwim</a> Preview Application</h2>
     Enter a Google Code project name: <input type='text' id='GoCoProjectName' size='20' value='wikiwym'/>
     or:
-		<select id='SelectProject' title='These projects were selected because they have nice test pages :)'>
+		<select id='SelectProject' title='These projects were selected because i contribute to them or they have nice test pages :).'>
 	    <option>--Select Project--</option>
-	    <option>beup</option>
-	    <option>v8</option>
+	    <option>wikiwym</option>
 	    <option>v8-juice</option>
+	    <option>jsonmessage</option>
+	    <option>whefs</option>
+	    <option>qboard</option>
+	    <option>v8</option>
 	    <option>v8cgi</option>
 	    <option>yapeal</option>
-	    <option>qboard</option>
-	    <option>whefs</option>
-	    <option>wikiwym</option>
 	    <option>cproxyv8</option>
+	    <option>beup</option>
     </select>
     or: <button onclick="goHome()">Home</button>
 	</div>
