Minor doc corrections.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -445,17 +445,17 @@ to run this application. Sorry. Try <a href='http://www.google.com/chrome'>Googl
 <div id='DefaultWikiText' style='visibility:hidden'>
 =[http://code.google.com/p/wikiwym Wikiwym] demonstration!=
 
-This page demonstrates wikiwym, a !JavaScript wiki syntax parser
-which supports a large subset of the Google Code wiki syntax.
+This page demonstrates wikiwym, a !JavaScript wiki syntax parser which supports a large subset of the Google Code wiki syntax.
 
 =Using this Application=
+
 In the text field at the top of the screen you can enter the name of a project hosted at
 [http://code.google.com Google Code] to load the list of wiki pages for that project
 (taken from their SVN repository). Then click on a page name to preview it here.
 
-You can edit the wiki markup. Changes made will be updates in the preview/diff view
-when you tap Enter or click the Update button.
-
+You can edit the wiki markup. Changes made will be reflected in the preview/diff/HTML
+views on the right-hand side. (_When_ the updates happen depend on the Update settings,
+which can be changed via the menu at the top.)
 
 =About this Application=
 This app was written by [http://wanderinghorse.net/home/stephan/ Stephan Beal] with help from:
