Fixed an embarassing typo and broken link to wikiwym project page.

--- a/GoCoWi-previewer.html
+++ b/GoCoWi-previewer.html
@@ -371,7 +371,7 @@
 </head>
 <body>
     <div style='text-align:center;padding:0px;margin:0px;'>
-    <h2><a href='http://code.google.com/p/wikiwim'>Wikiwim</a> Preview Application</h2>
+    <h2><a href='http://code.google.com/p/wikiwym'>Wikiwym</a> Preview Application</h2>
     Enter a Google Code project name: <input type='text' id='GoCoProjectName' size='20' value='wikiwym'/>
     or:
 		<select id='SelectProject' title='These projects were selected because i contribute to them or they have nice test pages :).'>
